--- a/css/reset.css
+++ b/css/reset.css
@@ -29,6 +29,8 @@ footer, header, hgroup, menu, nav, section {
   display: block;
 }
 body {
+  font-family: 'Open Sans', sans-serif;
+  background-color: #ff991e;
   line-height: 1;
 }
 ol, ul {
