--- a/css/list.css
+++ b/css/list.css
@@ -7,14 +7,13 @@ h1 {
 .container {
   width: 100%;
   padding: 30px 0 0 0;
-  overflow: hidden;
 }
 
 .item {
-  display: block;
+  display: inline-block;
   width: 27%;
   margin: 1% 3%;
-  float: left;
+  vertical-align: top;
 }
 
 .location,
