--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,8 @@
+body {
+  width: 100%;
+  background: url(../files/bg.jpg) no-repeat 50% 50% fixed;
+}
+
 h1 {
   font-size: 4.375em;  /* 70px */
   line-height: 1.29em; /* 90px */
