--- a/css/index.css
+++ b/css/index.css
@@ -42,6 +42,7 @@ h1 {
   display: block;
   width: 100%;
   margin: 0;
+  padding: 2% 5%;
   vertical-align: middle;
 }
 
@@ -49,16 +50,16 @@ h1 {
 
 #container.special .name {
   display: inline-block;
-  width: 70%;
+  width: 63%;
   font-size: 3.125em; /* 50px */
-  line-height: 1.6em; /* 80px */
+  line-height: 1.12em; /* 56px */
 }
 
 #container.special .time {
   display: inline-block;
-  width: 29%;
-  font-size: 3.125em; /* 50px */
-  line-height: 1.6em; /* 80px */
+  width: 26%;
+  font-size: 2.25em; /* 36px */
+  line-height: 1.56em; /* 56px */
   text-align: right;
 }
   /* /Special list */
@@ -68,7 +69,7 @@ h1 {
   display: block;
   width: 100%;
   margin: 0;
-  padding: 2%;
+  padding: 2% 5%;
   vertical-align: middle;
 }
 
