--- a/css/index.css
+++ b/css/index.css
@@ -22,11 +22,11 @@ h1 {
 
 .template { display: none; }
 
-/* Dynamic grid aka default grid*/
+/* Dynamic grid aka default grid */
 .item {
   display: inline-block;
   width: 27%;
-  margin: 1% 3%;
+  margin: 3%;
   vertical-align: top;
 }
 
