--- a/css/portrait.css
+++ b/css/portrait.css
@@ -2,20 +2,23 @@ body {
   height: 1920px;
 }
 
-.item { margin: 2%; }
+/* Dynamic grid aka default grid */
+.item { width: 43%; }
 
 .location,
 .time {
-  font-size: 0.75em;   /* 12px */
-  line-height: 3.33em; /* 40px */
+  font-size: 1em;  /* 16px */
+  line-height: 2.42em; /* 34px */
 }
 
 .name {
-  font-size: 1.625em;  /* 26px */
-  line-height: 1.23em; /* 32px */
+  display: block;
+  font-size: 2.813em; /* 45px */
+  line-height: 1em;   /* 45px */
 }
+/* /Dynamic grid */
 
-  /* Special list */
+/* Special list */
 #container.special .item { padding: 3% 5%; }
 
 #container.special .name {
@@ -27,8 +30,8 @@ body {
   font-size: 1.75em; /* 28px */
   line-height: 1.79em; /* 50px */
 }
-  /* /Special list */
+/* /Special list */
 
-  /* Simple list */
+/* Simple list */
 #container.list .item { padding: 3%; }
-  /* /Simple list */
+/* /Simple list */
