--- a/css/index.css
+++ b/css/index.css
@@ -25,8 +25,9 @@ h1 {
 /* Dynamic grid aka default grid */
 .item {
   display: inline-block;
-  width: 27%;
-  margin: 3%;
+  width: 26%;
+  margin: 0 3%;
+  padding: 34px 0;
   vertical-align: top;
 }
 
